# chatbot

./: Cargo.toml  基于Rust的智能聊天机器人系统实现报告.md
src/: cli.rs  database.rs  embeddings.rs  llm.rs  main.rs
