[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
tokenizers = "0.15.0"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hf-hub = { version = "0.3.2", features = ["tokio"] }
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0.108"
tracing-chrome = "0.7.1"
lazy_static = "1.4.0"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
serde = { version = "1.0.193", features = ["derive"] }
async_once = "0.2.6"
reqwest = "0.11.22"
regex = "1.10.2"
chrono = "0.4.31"